fix: #2622 drawer-end makes horizontal scrollbar permanently visible (#2630)
* fix: #2622 drawer-end makes horizontal scrollbar permanently visible

+ Updated src/components/styled/drawer.css to add overflow-hidden

* chore: use overflow-x-hidden instead of overflow-hidden to drawer component

--- a/src/components/styled/drawer.css
+++ b/src/components/styled/drawer.css
@@ -1,6 +1,7 @@
 .drawer {
   width: 100%;
   &-side {
+    @apply overflow-x-hidden;
     & > .drawer-overlay {
       @apply cursor-pointer bg-transparent transition-colors duration-200 ease-out;
     }
